--- a/src/app/Forgotpassword/SuccessForgotpassword/page.module.css
+++ b/src/app/Forgotpassword/SuccessForgotpassword/page.module.css
@@ -49,7 +49,7 @@ top: -50px;
     -webkit-text-stroke-width: 1;
     -webkit-text-stroke-color: #000;
     font-family: Supreme;
-    font-size: 40px;
+    font-size: 55px;
     font-style: normal;
     font-weight: 700;
     line-height: 110%; /* 70.4px */
@@ -80,18 +80,12 @@ top: -50px;
 }
 
 .o{
-    position: absolute;
-    right: 340px;
+    position: relative;
+    right: -140px;
   
     
 
-    color: var(--Error, #F93827);
-font-family: Supreme;
-font-size: 14px;
-font-style: normal;
-font-weight: 700;
-line-height: 150%; /* 21px */
-letter-spacing: 0.28px;
+
 
 }
 
@@ -172,32 +166,29 @@ align-self: stretch;
 
 
     display: flex;
-    width: 500px;
-    height: 40px;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: var(--small-4px, 4px);
-    flex-shrink: 0;
-    align-items: center;
+    height: 80px;
+    padding: var(--medium-12px, 12px) var(--medium-16px, 16px);
     justify-content: center;
-    padding: var(--medium-24px, 2px) var(--small-8px, 4px);
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
 
-   
+    
 
-border-radius: var(--medium-20px, 20px);
-background: var(--button-primary, #9F936F);
+    border-radius: var(--medium-12px, 12px);
+background: var(--surface-success, #85A947);
+box-shadow: 0px 4px var(--large-40px, 40px) 0px var(--surface-success, #85A947);
 }
 
-.fontLogin{
+.fontSuccess{
 
 
-    color: var(--text-primary, #0F0E0A);
-    text-align: center;
+    color: var(--text-invert, #FBFBF9);
     font-feature-settings: 'liga' off;
     
     /* Heading 3/Emphasized */
     font-family: Supreme;
-    font-size: var(--large-32px, 20px);
+    font-size: var(--large-32px, 32px);
     font-style: normal;
     font-weight: 700;
     line-height: 110%; /* 35.2px */
@@ -247,13 +238,7 @@ font-weight: 500;
 line-height: 24px; /* 150% */
 }
 
-.nt{
 
-    display: flex;
-padding: var(--small-6px, 6px);
-align-items: center;
-gap: var(--medium-20px, 20px);
-}
 
 .Frame4{
 
@@ -297,30 +282,72 @@ gap: var(--large-80px, 80px);
    
 
 }
+.textmo{
 
-.error{
+    right: 100px;
+    position: relative;
+}
 
+.textcontent{
+
+
+
+    color: #000;
+    font-feature-settings: 'liga' off;
     
-    background-color: #f56565; /* bg-red-500 */
-    width: fit-content; /* w-fit */
-    font-size: 0.875rem; /* text-sm */
-    color: white; /* text-white */
-    padding-top: 0.25rem; /* py-1 (top and bottom padding) */
-    padding-bottom: 0.25rem; /* py-1 (top and bottom padding) */
-    padding-left: 0.75rem; /* px-3 (left and right padding) */
-    padding-right: 0.75rem; /* px-3 (left and right padding) */
-    border-radius: 0.375rem; /* rounded-md */
-    margin-top: 0.5rem; /* mt-2 */
+    /* Heading 3/Regular */
+    font-family: Supreme;
+    font-size: var(--large-32px, 25px);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 110%; /* 35.2px */
+
+    right: -40px;
+    position: relative;
 
 
+}
 
+.textLogin{
+
+    color: var(--surface-contrast, #858582);
+    font-feature-settings: 'liga' off;
     
-position: relative;
-top: -10px;
-right: -170px;
+    /* Body/Regular */
+    font-family: Supreme;
+    font-size: var(--medium-16px, 16px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: 0.32px;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: auto;
+    text-decoration-thickness: auto;
+    text-underline-offset: auto;
+    text-underline-position: from-font;
 
-display: flex;
-flex-direction: column;
-justify-content: center; 
+}
+
+.textAm{
+
+    color: #000;
+    font-feature-settings: 'liga' off;
+    
+    /* Body/Regular */
+    font-family: Supreme;
+    font-size: var(--medium-16px, 16px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+    letter-spacing: 0.32px;
+
+}
+
+.nt{
+
+    display: flex;
+padding: var(--small-6px, 6px);
 align-items: center;
+gap: var(--medium-20px, 20px);
 }
