--- a/src/app/Profile/page.module.css
+++ b/src/app/Profile/page.module.css
@@ -29,14 +29,13 @@
 
 .frame{
 
-    width: 600px;
-    height: 1030px;
+    width: 700px;
+    height: 500px;
     flex-shrink: 0;
 
-    border-radius: var(--medium-20px, 20px);
-background: var(--surface-minimal, #EDEDEB);
-box-shadow: 0px 4px var(--small-8px, 8px) 0px var(--surface-minimal, #EDEDEB);
-
+   
+position: relative;
+left: 110px;
 
 
 
@@ -97,7 +96,7 @@ letter-spacing: 0.32px;
 .input1{
 
     display: flex;
-padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-16px, 16px);
+padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 0px) var(--medium-16px, 16px);
 align-items: center;
 align-self: stretch;
 
@@ -143,16 +142,16 @@ gap: var(--medium-20px, 20px);
 .fontMonth{
 
     color: var(--text-secondary, #4A4A46);
-font-feature-settings: 'liga' off;
-font-family: Supreme;
-font-size: 14px;
-font-style: normal;
-font-weight: 700;
-line-height: 150%; /* 21px */
-letter-spacing: 0.28px;
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
 
 position: relative;
-top: 20px;
+top: 100px;
 right: -15px;
 
 }
@@ -165,9 +164,160 @@ flex-direction: column;
 align-items: flex-start;
 gap: var(--small-4px, 4px);
 align-self: stretch;
+
+position: relative;
+    top: 30px;
 }
 
+
 .fip2{
+
+    
+
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+
+    position: absolute;
+    top: -50px;
+    right: 650px;
+}
+
+
+.fip3{
+
+    
+
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+    width: 100px;
+    position: absolute;
+    top: 18px;
+    right: 590px;
+}
+
+.fip4{
+
+    
+
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+
+
+
+    position: absolute;
+    top: 85px;
+    right: 660px;
+}
+
+.fip5{
+
+    
+    
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+    display: flex;
+    padding-right: var(--small-8px, 8px);
+    align-items: center;
+    gap: 80px;
+    align-self: stretch;
+    position: absolute;
+    top: 85px;
+    right: 410px;
+}
+
+
+.fip6{
+
+    
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+    display: flex;
+    padding-right: var(--small-8px, 8px);
+    align-items: center;
+    gap: 80px;
+    align-self: stretch;
+    position: absolute;
+  
+    top: 85px;
+    right: 200px;
+}
+
+.fip7{
+
+    
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+    display: flex;
+    padding-right: var(--small-8px, 8px);
+    align-items: center;
+    gap: 80px;
+    align-self: stretch;
+    position: absolute;
+    width: 100px;
+    top: 56px;
+    right: 600px;
+}
+
+
+.fip8{
+
+    color: var(--text-secondary, #4A4A46);
+    font-feature-settings: 'liga' off;
+    font-family: Supreme;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 150%; /* 21px */
+    letter-spacing: 0.28px;
+    
+    display: flex;
+    padding-right: var(--small-8px, 8px);
+    align-items: center;
+    gap: 80px;
+    align-self: stretch;
+    position: absolute;
+    width: 100px;
+    top: 120px;
+    right: 600px;
+}
+
+.fip9{
 
     
     display: flex;
@@ -175,9 +325,33 @@ align-self: stretch;
     align-items: center;
     gap: 80px;
     align-self: stretch;
-    position: relative;
-    top: 20px;
+    position: absolute;
+    width: 300px;
+    top: 185px;
+    right: 400px;
 }
+
+.fip10{
+
+    
+    display: flex;
+    padding-right: var(--small-8px, 8px);
+    align-items: center;
+    gap: 80px;
+    align-self: stretch;
+    position: absolute;
+    top: 247px;
+    right: 670px;
+}
+
+.po{
+
+    position: absolute;
+    top: 170px;
+    right: 920px;
+
+}
+
 
 .Select{
 
@@ -207,7 +381,7 @@ letter-spacing: 0.32px;
 .input{
 
     display: flex;
-    padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-16px, 16px);
+    padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 0px) var(--medium-16px, 16px);
     align-items: center;
     align-self: stretch;
     
@@ -325,35 +499,5 @@ letter-spacing: 0.32px;
 
 }
 
-.error1{
 
 
-    
-    
-    background-color: #f56565; /* bg-red-500 */
-    width: fit-content; /* w-fit */
-    font-size: 0.875rem; /* text-sm */
-    color: white; /* text-white */
-    padding-top: 0.25rem; /* py-1 (top and bottom padding) */
-    padding-bottom: 0.25rem; /* py-1 (top and bottom padding) */
-    padding-left: 0.75rem; /* px-3 (left and right padding) */
-    padding-right: 0.75rem; /* px-3 (left and right padding) */
-    border-radius: 0.375rem; /* rounded-md */
-    margin-top: 0.5rem; /* mt-2 */
-
-
-
-    
-position: relative;
-top: 525px;
-right: -125px;
-
-display: flex;
-flex-direction: column;
-justify-content: center; 
-align-items: center;
-
-
-
-
-}
