--- a/src/app/componants/Navbar.module.css
+++ b/src/app/componants/Navbar.module.css
@@ -37,3 +37,17 @@ background: var(--button-primary, #9F936F);
 
 
 }
+
+.Logout{
+    display: flex;
+    padding: var(--medium-12px, 12px) var(--large-32px, 32px);
+flex-direction: column;
+justify-content: center;
+align-items: center;
+
+border-radius: var(--medium-20px, 20px);
+background: var(--button-primary, #ff3f3f);
+
+
+
+}
