--- a/src/app/Profile/page.module.css
+++ b/src/app/Profile/page.module.css
@@ -1,19 +1,17 @@
-.container{
-
+.container {
     position: relative;
     top: 15px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
-    
 }
 
-.SU{
+.SU {
     color: #000;
-    font-feature-settings: 'liga' off;
-    
+    font-feature-settings: "liga" off;
+
     /* Heading 2/Regular */
     -webkit-text-stroke-width: 1;
     -webkit-text-stroke-color: #000;
@@ -23,31 +21,21 @@
     font-weight: 500;
     line-height: 110%; /* 52.8px */
     letter-spacing: -0.48px;
-
 }
 
-
-.frame{
-
+.frame {
     width: 700px;
     height: 500px;
     flex-shrink: 0;
 
-   
-position: relative;
-left: 110px;
-
-
-
+    position: relative;
+    left: 110px;
 }
 
-.signup{
-
-   
-
+.signup {
     position: relative;
     left: 60px;
-    
+
     display: inline-flex;
     padding: 8px 16px 8px 12px;
     justify-content: center;
@@ -56,93 +44,70 @@ left: 110px;
     font-size: 20px;
 
     border-radius: 8px;
-    
-
-
-
 }
 
-.fon{
-    color: var(--text-primary, #0F0E0A);
-font-feature-settings: 'liga' off;
+.fon {
+    color: var(--text-primary, #0f0e0a);
+    font-feature-settings: "liga" off;
 
-/* Body/Emphasized */
-font-family: Supreme;
-font-size: var(--medium-16px, 16px);
-font-style: normal;
-font-weight: 500;
-line-height: 150%; /* 24px */
-letter-spacing: 0.32px;
+    /* Body/Emphasized */
+    font-family: Supreme;
+    font-size: var(--medium-16px, 16px);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%; /* 24px */
+    letter-spacing: 0.32px;
 }
 
-.Move{
-
+.Move {
     position: relative;
     top: 30px;
-
 }
 
-.nt{
-
-
-
-        display: flex;
+.nt {
+    display: flex;
     padding: var(--small-6px, 6px);
     align-items: center;
     gap: var(--medium-20px, 20px);
-
 }
 
-.input1{
-
+.input1 {
     display: flex;
-padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 0px) var(--medium-16px, 16px);
-align-items: center;
-align-self: stretch;
+    padding: var(--medium-12px, 12px) var(--medium-12px, 12px)
+        var(--medium-12px, 0px) var(--medium-16px, 16px);
+    align-items: center;
+    align-self: stretch;
 
-border-radius: var(--medium-12px, 12px);
-border: 1px solid var(--border-primary, #0F0E0A);
+    border-radius: var(--medium-12px, 12px);
+    border: 1px solid var(--border-primary, #0f0e0a);
 
+    color: var(--text-contrast, #0f0e0a);
+    font-feature-settings: "liga" off;
 
-
-
-
-
-color: var(--text-contrast, #0F0E0A);
-font-feature-settings: 'liga' off;
-
-/* Body/Regular */
-font-family: Supreme;
-font-size: var(--medium-16px, 16px);
-font-style: normal;
-font-weight: 400;
-line-height: 150%; /* 24px */
-letter-spacing: 0.32px;
-
+    /* Body/Regular */
+    font-family: Supreme;
+    font-size: var(--medium-16px, 16px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+    letter-spacing: 0.32px;
 }
 
-.Moveinput1{
+.Moveinput1 {
     position: relative;
     top: 60px;
-
-
 }
 
-.frameinput{
-
-
+.frameinput {
     display: flex;
-flex-direction: column;
-align-items: center;
-gap: var(--medium-20px, 20px);
+    flex-direction: column;
+    align-items: center;
+    gap: var(--medium-20px, 20px);
 }
 
-
-
-.fontMonth{
-
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fontMonth {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -150,32 +115,25 @@ gap: var(--medium-20px, 20px);
     line-height: 150%; /* 21px */
     letter-spacing: 0.28px;
 
-position: relative;
-top: 100px;
-right: -15px;
-
+    position: relative;
+    top: 100px;
+    right: -15px;
 }
 
-
-.frameinput2{
-
+.frameinput2 {
     display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: var(--small-4px, 4px);
-align-self: stretch;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: var(--small-4px, 4px);
+    align-self: stretch;
 
-position: relative;
+    position: relative;
     top: 30px;
 }
 
-
-.fip2{
-
-    
-
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip2 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -188,13 +146,9 @@ position: relative;
     right: 650px;
 }
 
-
-.fip3{
-
-    
-
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip3 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -207,12 +161,9 @@ position: relative;
     right: 590px;
 }
 
-.fip4{
-
-    
-
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip4 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -220,19 +171,14 @@ position: relative;
     line-height: 150%; /* 21px */
     letter-spacing: 0.28px;
 
-
-
     position: absolute;
     top: 85px;
     right: 660px;
 }
 
-.fip5{
-
-    
-    
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip5 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -249,12 +195,9 @@ position: relative;
     right: 410px;
 }
 
-
-.fip6{
-
-    
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip6 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -267,16 +210,14 @@ position: relative;
     gap: 80px;
     align-self: stretch;
     position: absolute;
-  
+
     top: 85px;
     right: 200px;
 }
 
-.fip7{
-
-    
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip7 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
@@ -294,18 +235,16 @@ position: relative;
     right: 600px;
 }
 
-
-.fip8{
-
-    color: var(--text-secondary, #4A4A46);
-    font-feature-settings: 'liga' off;
+.fip8 {
+    color: var(--text-secondary, #4a4a46);
+    font-feature-settings: "liga" off;
     font-family: Supreme;
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
     line-height: 150%; /* 21px */
     letter-spacing: 0.28px;
-    
+
     display: flex;
     padding-right: var(--small-8px, 8px);
     align-items: center;
@@ -317,9 +256,7 @@ position: relative;
     right: 600px;
 }
 
-.fip9{
-
-    
+.fip9 {
     display: flex;
     padding-right: var(--small-8px, 8px);
     align-items: center;
@@ -331,9 +268,7 @@ position: relative;
     right: 400px;
 }
 
-.fip10{
-
-    
+.fip10 {
     display: flex;
     padding-right: var(--small-8px, 8px);
     align-items: center;
@@ -344,56 +279,25 @@ position: relative;
     right: 670px;
 }
 
-.po{
-
+.po {
     position: absolute;
     top: 170px;
     right: 920px;
-
 }
 
-
-.Select{
-
-
+.Select {
     display: flex;
-padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-16px, 16px);
-align-items: center;
-align-self: stretch;
-
-border-radius: var(--medium-12px, 12px);
-border: 1px solid var(--border-primary, #0F0E0A);
-
-
-
-color: var(--text-primary, #0F0E0A);
-font-feature-settings: 'liga' off;
-
-/* Body/Regular */
-font-family: Supreme;
-font-size: var(--medium-16px, 16px);
-font-style: normal;
-font-weight: 400;
-line-height: 150%; /* 24px */
-letter-spacing: 0.32px;
-}
-
-.input{
-
-    display: flex;
-    padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 0px) var(--medium-16px, 16px);
+    padding: var(--medium-12px, 12px) var(--medium-12px, 12px)
+        var(--medium-12px, 12px) var(--medium-16px, 16px);
     align-items: center;
     align-self: stretch;
-    
+
     border-radius: var(--medium-12px, 12px);
-    border: 1px solid var(--border-primary, #0F0E0A);
-   
+    border: 1px solid var(--border-primary, #0f0e0a);
 
+    color: var(--text-primary, #0f0e0a);
+    font-feature-settings: "liga" off;
 
-    
-    color: var(--text-contrast, #0F0E0A);
-    font-feature-settings: 'liga' off;
-    
     /* Body/Regular */
     font-family: Supreme;
     font-size: var(--medium-16px, 16px);
@@ -401,79 +305,80 @@ letter-spacing: 0.32px;
     font-weight: 400;
     line-height: 150%; /* 24px */
     letter-spacing: 0.32px;
-
-
 }
 
-.button{
+.input {
+    display: flex;
+    padding: var(--medium-12px, 12px) var(--medium-12px, 12px)
+        var(--medium-12px, 0px) var(--medium-16px, 16px);
+    align-items: center;
+    align-self: stretch;
 
-   display: flex;
-width: 602px;
-height: 69px;
-padding: var(--medium-24px, 24px) var(--small-8px, 8px);
-justify-content: center;
-align-items: center;
-gap: var(--small-0px, 0px);
-flex-shrink: 0;
+    border-radius: var(--medium-12px, 12px);
+    border: 1px solid var(--border-primary, #0f0e0a);
 
+    color: var(--text-contrast, #0f0e0a);
+    font-feature-settings: "liga" off;
 
-border-radius: var(--medium-20px, 20px);
-background: var(--button-primary, #9F936F);
-
-
-
-
+    /* Body/Regular */
+    font-family: Supreme;
+    font-size: var(--medium-16px, 16px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+    letter-spacing: 0.32px;
 }
 
+.button {
+    display: flex;
+    width: 602px;
+    height: 69px;
+    padding: var(--medium-24px, 24px) var(--small-8px, 8px);
+    justify-content: center;
+    align-items: center;
+    gap: var(--small-0px, 0px);
+    flex-shrink: 0;
 
-.fontsignup{
-
-    color: var(--text-primary, #0F0E0A);
-font-feature-settings: 'liga' off;
-
-/* Body/Emphasized */
-font-family: Supreme;
-font-size: var(--medium-16px, 30px);
-font-style: normal;
-font-weight: 500;
-line-height: 150%; /* 24px */
-letter-spacing: 0.32px;
-
-
+    border-radius: var(--medium-20px, 20px);
+    background: var(--button-primary, #9f936f);
 }
 
-.error{
+.fontsignup {
+    color: var(--text-primary, #0f0e0a);
+    font-feature-settings: "liga" off;
 
-    
-        background-color: #f56565; /* bg-red-500 */
-        width: fit-content; /* w-fit */
-        font-size: 0.875rem; /* text-sm */
-        color: white; /* text-white */
-        padding-top: 0.25rem; /* py-1 (top and bottom padding) */
-        padding-bottom: 0.25rem; /* py-1 (top and bottom padding) */
-        padding-left: 0.75rem; /* px-3 (left and right padding) */
-        padding-right: 0.75rem; /* px-3 (left and right padding) */
-        border-radius: 0.375rem; /* rounded-md */
-        margin-top: 0.5rem; /* mt-2 */
+    /* Body/Emphasized */
+    font-family: Supreme;
+    font-size: var(--medium-16px, 30px);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%; /* 24px */
+    letter-spacing: 0.32px;
+}
 
+.error {
+    background-color: #f56565; /* bg-red-500 */
+    width: fit-content; /* w-fit */
+    font-size: 0.875rem; /* text-sm */
+    color: white; /* text-white */
+    padding-top: 0.25rem; /* py-1 (top and bottom padding) */
+    padding-bottom: 0.25rem; /* py-1 (top and bottom padding) */
+    padding-left: 0.75rem; /* px-3 (left and right padding) */
+    padding-right: 0.75rem; /* px-3 (left and right padding) */
+    border-radius: 0.375rem; /* rounded-md */
+    margin-top: 0.5rem; /* mt-2 */
 
-
-        
     position: relative;
     top: 45px;
     right: -210px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
 }
 
-
-
-.success{
-
-
+.success {
     background-color: #3df904; /* bg-red-500 */
     width: fit-content; /* w-fit */
     font-size: 0.875rem; /* text-sm */
@@ -485,19 +390,12 @@ letter-spacing: 0.32px;
     border-radius: 0.375rem; /* rounded-md */
     margin-top: 0.5rem; /* mt-2 */
 
-            
     position: relative;
     top: 45px;
     right: -210px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
-  
-
-
 }
-
-
-
