--- a/src/app/componants/Navbar.module.css
+++ b/src/app/componants/Navbar.module.css
@@ -1,53 +1,43 @@
-.nav{
-
+.nav {
     display: flex;
-padding: 24px var(--large-32px, 32px);
-justify-content: space-between;
-align-items: center;
-align-self: stretch;
+    padding: 24px var(--large-32px, 32px);
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
 
-
-
-background: var(--fade, rgba(255, 255, 255, 0.50));
-box-shadow: var(--small-0px, 0px) var(--small-0px, 0px) var(--large-32px, 32px) var(--small-8px, 8px) var(--surface-mild-contrast, #C0C0BE);
-backdrop-filter: blur(calc(var(--large-32px, 32px) / 2));
-
-
-
+    background: var(--fade, rgba(255, 255, 255, 0.5));
+    box-shadow: var(--small-0px, 0px) var(--small-0px, 0px)
+        var(--large-32px, 32px) var(--small-8px, 8px)
+        var(--surface-mild-contrast, #c0c0be);
+    -webkit-backdrop-filter: blur(calc(var(--large-32px, 32px) / 2));
+    backdrop-filter: blur(calc(var(--large-32px, 32px) / 2));
 }
 
-.nt{
-
+.nt {
     display: flex;
-padding: var(--small-6px, 6px);
-align-items: center;
-gap: var(--medium-20px, 20px);
+    padding: var(--small-6px, 6px);
+    align-items: center;
+    gap: var(--medium-20px, 20px);
 }
 
-.button{
-
+.button {
     display: flex;
     padding: var(--medium-12px, 12px) var(--large-32px, 32px);
-flex-direction: column;
-justify-content: center;
-align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-border-radius: var(--medium-20px, 20px);
-background: var(--button-primary, #9F936F);
-
-
+    border-radius: var(--medium-20px, 20px);
+    background: var(--button-primary, #9f936f);
 }
 
-.Logout{
+.Logout {
     display: flex;
     padding: var(--medium-12px, 12px) var(--large-32px, 32px);
-flex-direction: column;
-justify-content: center;
-align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-border-radius: var(--medium-20px, 20px);
-background: var(--button-primary, #ff3f3f);
-
-
-
+    border-radius: var(--medium-20px, 20px);
+    background: var(--button-primary, #ff3f3f);
 }
