--- a/src/app/register/page.module.css
+++ b/src/app/register/page.module.css
@@ -1,17 +1,19 @@
-.container {
+.container{
+
     position: relative;
     top: 15px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
+    
 }
 
-.SU {
+.SU{
     color: #000;
-    font-feature-settings: "liga" off;
-
+    font-feature-settings: 'liga' off;
+    
     /* Heading 2/Regular */
     -webkit-text-stroke-width: 1;
     -webkit-text-stroke-color: #000;
@@ -21,23 +23,32 @@
     font-weight: 500;
     line-height: 110%; /* 52.8px */
     letter-spacing: -0.48px;
+
 }
 
-.frame {
-    width: 600px;
-    height: 1030px;
+
+.frame{
+
+    width: 400px;
+    height: 950px;
     flex-shrink: 0;
 
     border-radius: var(--medium-20px, 20px);
-    background: var(--surface-minimal, #ededeb);
-    box-shadow: 0px 4px var(--small-8px, 8px) 0px
-        var(--surface-minimal, #ededeb);
+background: var(--surface-minimal, #EDEDEB);
+box-shadow: 0px 4px var(--small-8px, 8px) 0px var(--surface-minimal, #EDEDEB);
+
+
+
+
 }
 
-.signup {
-    position: relative;
-    left: 60px;
+.signup{
 
+   
+
+    position: relative;
+    left: 150px;
+    
     display: inline-flex;
     padding: 8px 16px 8px 12px;
     justify-content: center;
@@ -46,91 +57,119 @@
     font-size: 20px;
 
     border-radius: 8px;
+    
+
+
+
 }
 
-.fon {
-    color: var(--text-primary, #0f0e0a);
-    font-feature-settings: "liga" off;
+.fon{
+    color: var(--text-primary, #0F0E0A);
+font-feature-settings: 'liga' off;
 
-    /* Body/Emphasized */
-    font-family: Supreme;
-    font-size: var(--medium-16px, 16px);
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%; /* 24px */
-    letter-spacing: 0.32px;
+/* Body/Emphasized */
+font-family: Supreme;
+font-size: var(--medium-16px, 16px);
+font-style: normal;
+font-weight: 500;
+line-height: 150%; /* 24px */
+letter-spacing: 0.32px;
 }
 
-.Move {
+.Move{
+
     position: relative;
     top: 30px;
+
 }
 
-.nt {
-    display: flex;
+.nt{
+
+
+
+        display: flex;
     padding: var(--small-6px, 6px);
     align-items: center;
     gap: var(--medium-20px, 20px);
+
 }
 
-.input1 {
+.input1{
+
     display: flex;
-    padding: var(--medium-12px, 12px) var(--medium-12px, 12px)
-        var(--medium-12px, 12px) var(--medium-16px, 16px);
-    align-items: center;
-    align-self: stretch;
+padding: var(--medium-12px, 0px) var(--medium-12px, 0px) var(--medium-12px, 5px) var(--medium-16px, 16px);
+align-items: center;
+align-self: stretch;
 
-    border-radius: var(--medium-12px, 12px);
-    border: 1px solid var(--border-primary, #0f0e0a);
+border-radius: var(--medium-12px, 12px);
+border: 1px solid var(--border-primary, #0F0E0A);
 
-    color: var(--text-contrast, #0f0e0a);
-    font-feature-settings: "liga" off;
 
-    /* Body/Regular */
-    font-family: Supreme;
-    font-size: var(--medium-16px, 16px);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 24px */
-    letter-spacing: 0.32px;
+
+
+
+
+color: var(--text-contrast, #0F0E0A);
+font-feature-settings: 'liga' off;
+
+/* Body/Regular */
+font-family: Supreme;
+font-size: var(--medium-16px, 16px);
+font-style: normal;
+font-weight: 400;
+line-height: 150%; /* 24px */
+letter-spacing: 0.32px;
+
 }
 
-.Moveinput1 {
+.Moveinput1{
     position: relative;
     top: 60px;
+
+
 }
 
-.frameinput {
+.frameinput{
+
+
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: var(--medium-20px, 20px);
+flex-direction: column;
+align-items: center;
+gap: var(--medium-20px, 20px);
 }
 
-.fontMonth {
-    color: var(--text-secondary, #4a4a46);
-    font-feature-settings: "liga" off;
-    font-family: Supreme;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 150%; /* 21px */
-    letter-spacing: 0.28px;
 
-    position: relative;
-    top: 20px;
-    right: -15px;
+
+.fontMonth{
+
+    color: var(--text-secondary, #4A4A46);
+font-feature-settings: 'liga' off;
+font-family: Supreme;
+font-size: 14px;
+font-style: normal;
+font-weight: 700;
+line-height: 150%; /* 21px */
+letter-spacing: 0.28px;
+
+position: relative;
+top: 20px;
+right: -15px;
+
 }
 
-.frameinput2 {
+
+.frameinput2{
+
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: var(--small-4px, 4px);
-    align-self: stretch;
+flex-direction: column;
+align-items: flex-start;
+gap: var(--small-4px, 4px);
+align-self: stretch;
 }
 
-.fip2 {
+.fip2{
+
+    
     display: flex;
     padding-right: var(--small-8px, 8px);
     align-items: center;
@@ -140,19 +179,47 @@
     top: 20px;
 }
 
-.Select {
+.Select{
+
+
     display: flex;
-    padding: var(--medium-12px, 12px) var(--medium-12px, 12px)
-        var(--medium-12px, 12px) var(--medium-16px, 16px);
+padding: var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-12px, 12px) var(--medium-16px, 16px);
+align-items: center;
+align-self: stretch;
+
+border-radius: var(--medium-12px, 12px);
+border: 1px solid var(--border-primary, #0F0E0A);
+
+
+
+color: var(--text-primary, #0F0E0A);
+font-feature-settings: 'liga' off;
+
+/* Body/Regular */
+font-family: Supreme;
+font-size: var(--medium-16px, 16px);
+font-style: normal;
+font-weight: 400;
+line-height: 150%; /* 24px */
+letter-spacing: 0.32px;
+}
+
+.input{
+
+    display: flex;
+    padding: var(--medium-12px, 0px) var(--medium-12px, 0px) var(--medium-12px, 5px) var(--medium-16px, 16px);
     align-items: center;
     align-self: stretch;
-
+    
     border-radius: var(--medium-12px, 12px);
-    border: 1px solid var(--border-primary, #0f0e0a);
+    border: 1px solid var(--border-primary, #0F0E0A);
+   
 
-    color: var(--text-primary, #0f0e0a);
-    font-feature-settings: "liga" off;
 
+    
+    color: var(--text-contrast, #0F0E0A);
+    font-feature-settings: 'liga' off;
+    
     /* Body/Regular */
     font-family: Supreme;
     font-size: var(--medium-16px, 16px);
@@ -160,80 +227,82 @@
     font-weight: 400;
     line-height: 150%; /* 24px */
     letter-spacing: 0.32px;
+
+
 }
 
-.input {
-    display: flex;
-    padding: var(--medium-12px, 12px) var(--medium-12px, 12px)
-        var(--medium-12px, 12px) var(--medium-16px, 16px);
-    align-items: center;
-    align-self: stretch;
+.button{
 
-    border-radius: var(--medium-12px, 12px);
-    border: 1px solid var(--border-primary, #0f0e0a);
+   display: flex;
+width: 400px;
+height: 10px;
+padding: var(--medium-24px, 24px) var(--small-8px, 8px);
+justify-content: center;
+align-items: center;
+gap: var(--small-0px, 0px);
+flex-shrink: 0;
 
-    color: var(--text-contrast, #0f0e0a);
-    font-feature-settings: "liga" off;
 
-    /* Body/Regular */
-    font-family: Supreme;
-    font-size: var(--medium-16px, 16px);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 24px */
-    letter-spacing: 0.32px;
+border-radius: var(--medium-20px, 20px);
+background: var(--button-primary, #B68D4F);
+
+
+
+
 }
 
-.button {
-    display: flex;
-    width: 602px;
-    height: 69px;
-    padding: var(--medium-24px, 24px) var(--small-8px, 8px);
-    justify-content: center;
-    align-items: center;
-    gap: var(--small-0px, 0px);
-    flex-shrink: 0;
 
-    border-radius: var(--medium-20px, 20px);
-    background: var(--button-primary, #9f936f);
+.fontsignup{
+
+    color: var(--text-primary, #0F0E0A);
+font-feature-settings: 'liga' off;
+
+/* Body/Emphasized */
+font-family: Supreme;
+font-size: var(--medium-16px, 30px);
+font-style: normal;
+font-weight: 500;
+line-height: 150%; /* 24px */
+letter-spacing: 0.32px;
+
+
 }
 
-.fontsignup {
-    color: var(--text-primary, #0f0e0a);
-    font-feature-settings: "liga" off;
+.error{
 
-    /* Body/Emphasized */
-    font-family: Supreme;
-    font-size: var(--medium-16px, 30px);
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%; /* 24px */
-    letter-spacing: 0.32px;
-}
+    
+        background-color: #f56565; /* bg-red-500 */
+        width: fit-content; /* w-fit */
+        font-size: 0.875rem; /* text-sm */
+        color: white; /* text-white */
+        padding-top: 0.25rem; /* py-1 (top and bottom padding) */
+        padding-bottom: 0.25rem; /* py-1 (top and bottom padding) */
+        padding-left: 0.75rem; /* px-3 (left and right padding) */
+        padding-right: 0.75rem; /* px-3 (left and right padding) */
+        border-radius: 0.375rem; /* rounded-md */
+        margin-top: 0.5rem; /* mt-2 */
 
-.error {
-    background-color: #f56565; /* bg-red-500 */
-    width: fit-content; /* w-fit */
-    font-size: 0.875rem; /* text-sm */
-    color: white; /* text-white */
-    padding-top: 0.25rem; /* py-1 (top and bottom padding) */
-    padding-bottom: 0.25rem; /* py-1 (top and bottom padding) */
-    padding-left: 0.75rem; /* px-3 (left and right padding) */
-    padding-right: 0.75rem; /* px-3 (left and right padding) */
-    border-radius: 0.375rem; /* rounded-md */
-    margin-top: 0.5rem; /* mt-2 */
 
+
+        
     position: relative;
-    top: 45px;
-    right: -210px;
+    top: 760px;
+    right: -10px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
+
+
+   
 }
 
-.success {
+
+
+.success{
+
+
     background-color: #3df904; /* bg-red-500 */
     width: fit-content; /* w-fit */
     font-size: 0.875rem; /* text-sm */
@@ -245,17 +314,25 @@
     border-radius: 0.375rem; /* rounded-md */
     margin-top: 0.5rem; /* mt-2 */
 
+            
     position: relative;
     top: 45px;
     right: -210px;
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; 
     align-items: center;
+  
+
+
 }
 
-.error1 {
+.error1{
+
+
+    
+    
     background-color: #f56565; /* bg-red-500 */
     width: fit-content; /* w-fit */
     font-size: 0.875rem; /* text-sm */
@@ -267,12 +344,38 @@
     border-radius: 0.375rem; /* rounded-md */
     margin-top: 0.5rem; /* mt-2 */
 
-    position: relative;
-    top: 525px;
-    right: -125px;
+
+
+    
+position: relative;
+top: 760px;
+right: -20px;
+
+display: flex;
+flex-direction: column;
+justify-content: center; 
+align-items: center;
+
+
+
+
+}
+
+
+.buttonIconLeft{
+
 
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+width: 50px;
+height: var(--large-80px, 50px);
+padding: 16px;
+justify-content: center;
+align-items: center;
+gap: 8px;
+
+
+border-radius: var(--large-40px, 40px);
+background: var(--button-secondary, #B68D4F);
+
+
 }
